# framework

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: CI.yml  publish.yml
docs/: api-reference.md  cli.md  elements.md  getting-started.md  plugins.md  settings.md  transforms.md  types.md
src/: README.md
src/osintbuddy/: __init__.py  compiler.py  deps.py  errors.py  ipc_worker.py  messages.py  ob.py  output.py  plugins.py  results.py  sets.py  settings.py  types.py  utils.py
src/osintbuddy/cli/: __init__.py  console.py  display.py  logging.py  progress.py
src/osintbuddy/elements/: __init__.py  base.py  displays.py  inputs.py
